@@ -1,4 +1,7 @@
 gem "rspec", ">= 1.2.6"
+gem "polyglot"
+gem "treetop"
+gem "cucumber"
 gem "haml"
 gem "json"
 gem "hpricot"
@@ -7,7 +10,7 @@ gem "ruby-growl"
 gem "grit"
 gem "activesupport", :require_as => "active_support"
 gem "sishen-rtranslate"
-gem "progressions-basepath", :require_as => "basepath"
+gem "progressions-basepath", :require_as => "basepath", :except => :cucumber
 gem "progressions-g", :require_as => "g"
 gem "timer"
 gem "serenity"
